<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.quarkiverse</groupId>
        <artifactId>quarkiverse-parent</artifactId>
        <version>20</version>
    </parent>
    <groupId>io.quarkiverse.githubaction</groupId>
    <artifactId>quarkus-github-action-parent</artifactId>
    <version>2.8.0</version>
    <packaging>pom</packaging>
    <name>Quarkus GitHub Action - Parent</name>
    <modules>
        <module>deployment</module>
        <module>runtime</module>
        <module>testing</module>
    </modules>
    <properties>
        <compiler-plugin.version>3.14.1</compiler-plugin.version>
        <maven.compiler.release>17</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <quarkus.version>3.29.4</quarkus.version>
        <jandex-plugin.version>3.5.2</jandex-plugin.version>

        <quarkus-github-api.version>1.330.0</quarkus-github-api.version>
        <quarkus-github-app.version>2.12.2</quarkus-github-app.version>

        <assertj.version>3.27.6</assertj.version>
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.quarkus</groupId>
                <artifactId>quarkus-bom</artifactId>
                <version>${quarkus.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>io.quarkiverse.githubaction</groupId>
                <artifactId>quarkus-github-action</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.quarkiverse.githubaction</groupId>
                <artifactId>quarkus-github-action-deployment</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.quarkiverse.githubaction</groupId>
                <artifactId>quarkus-github-action-testing</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.quarkiverse.githubapi</groupId>
                <artifactId>quarkus-github-api</artifactId>
                <version>${quarkus-github-api.version}</version>
            </dependency>
            <dependency>
                <groupId>io.quarkiverse.githubapi</groupId>
                <artifactId>quarkus-github-api-deployment</artifactId>
                <version>${quarkus-github-api.version}</version>
            </dependency>
            <dependency>
                <groupId>io.quarkiverse.githubapp</groupId>
                <artifactId>quarkus-github-app-events</artifactId>
                <version>${quarkus-github-app.version}</version>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>${assertj.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>io.quarkus</groupId>
                    <artifactId>quarkus-maven-plugin</artifactId>
                    <version>${quarkus.version}</version>
                </plugin>
                <plugin>
                    <groupId>io.quarkus</groupId>
                    <artifactId>quarkus-config-doc-maven-plugin</artifactId>
                    <version>${quarkus.version}</version>
                </plugin>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${compiler-plugin.version}</version>
                    <configuration>
                        <compilerArgs>
                            <arg>-parameters</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>io.smallrye</groupId>
                    <artifactId>jandex-maven-plugin</artifactId>
                    <version>${jandex-plugin.version}</version>
                    <executions>
                        <execution>
                            <id>make-index</id>
                            <goals>
                                <goal>jandex</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <profiles>
        <profile>
            <id>docs</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>!true</value>
                </property>
            </activation>
            <modules>
                <module>docs</module>
            </modules>
        </profile>
        <profile>
            <id>it</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>!true</value>
                </property>
            </activation>
            <modules>
                <module>integration-tests</module>
            </modules>
        </profile>
    </profiles>
    <scm>
        <connection>scm:git:git@github.com:quarkiverse/quarkus-github-action.git</connection>
        <developerConnection>scm:git:git@github.com:quarkiverse/quarkus-github-action.git</developerConnection>
        <url>https://github.com/quarkiverse/quarkus-github-action</url>
      <tag>2.8.0</tag>
  </scm>
</project>
